@@ -1,40 +1,63 @@
 # Setup with  IntelliJ
-if you cannot start the app because a NullPointerException
-1. File -> Settings -> Build,Execution, Deployment -> Compiler
-2. Add ";!?*.css;!?*.fxml" to the resource pattern
-3. Right Click on ProjectName -> Open Module Settings -> Libraries -> + -> Java
-jars (with shifts pressed: 
-    - graph-editor-api-11.0.7.jar
-    - graph-editor-api-11.0.7-javadoc.jar
-    - graph-editor-api-11.0.7-sources.jar
-    - Ok
-    - Ok
-4. repeat for core and model jars.
+1. Clone the repository with `git clone`.
+
+2. For the GitHub-based maven repository `https://maven.pkg.github.com/eckig/graph-editor/` pom.xml, do the following:
+
+To be able to download the "Graph Editor" dependency via maven, you need to add a new server in your settings.xml file in your `${user.home}/.m2/` folder.
+If you don't already have a settings.xml file create a new one in your `${user.home}/.m2/` folder with the following structure:
+```
+<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd">
+    <localRepository/>
+    <interactiveMode/>
+    <offline/>
+    <pluginGroups/>
+    <servers>
+        <server>
+            <id>github</id>
+            <username>your_github_username</username>
+            <password>your_github_token</password>
+        </server>
+    </servers>
+    <mirrors/>
+    <proxies/>
+    <profiles/>
+    <activeProfiles/>
+</settings>
+```
+Source: https://github.com/eckig/graph-editor/issues/41#issuecomment-706487899
+
+If you don't do this, maven will not be able to download the graph-editor dependencies  and instead return a "401 - Unauthorized" error.
+
+3. Import the project with IntelliJ IDEA or a different IDE.
+
 ## How to run
 1. View -> Tool Windows -> Maven
 2. Lifecycle -> clean
 3. Plugins -> javafx -> javafx:run
 
-
 ## How to package
--requires JDK 16
+- Requires JDK 16 and Maven
+- Refer to the `MAVEN JPACKAGE PLUGIN` extract further down the README.
+  (README excerpt from https://github.com/wiverson/maven-jpackage-template)
 
-### Packaging under windows:
-run lifecycle install, navigate to target and start the msi.
--free [WiX Toolset](https://wixtoolset.org/) is required.
+### Packaging under Windows:
+- run lifecycle install, navigate to target folder and start the msi.
+- free [WiX Toolset](https://wixtoolset.org/) is required.
 
-### Packaging under linux:
-requires maven >=3.8.1, this is not the standard.
+### Packaging under Linux:
+- requires maven >=3.8.1 in our experience
 
 # Known Issues
 
-## debian
+## Debian
 -  E: Package 'libffi7' has no installation candidate
-   -  https://packages.debian.org/sid/amd64/libffi7/download download from here
-   -  sudo dpkg -i <deb file>
-    
+    -  https://packages.debian.org/sid/amd64/libffi7/download download from here
+    -  sudo dpkg -i <deb file>
+
 - No protocol or cannot access Display
     - do not launch as root
+
 
 
 # README OF MAVEN JPACKAGE PLUGIN
@@ -50,10 +73,10 @@ requires maven >=3.8.1, this is not the standard.
 # Goal
 
 1. Build nice, small cross-platform [JavaFX](https://openjfx.io)-based desktop apps with native installers
-   - Apx 30-40mb .dmg, .msi and .deb installers - check out the example builds in
-     [releases](https://github.com/wiverson/maven-jpackage-template/releases).
+    - Apx 30-40mb .dmg, .msi and .deb installers - check out the example builds in
+      [releases](https://github.com/wiverson/maven-jpackage-template/releases).
 2. Just use Maven - no shell scripts required.
-   - Use standard Maven dependency system to manage dependencies
+    - Use standard Maven dependency system to manage dependencies
 3. Generate [macOS (.dmg), Windows (.msi) and Unix (e.g. deb/rpm)](https://github.com/wiverson/maven-jpackage-template/releases)
    installers/packages automatically
    with [GitHub Actions](https://github.com/wiverson/maven-jpackage-template/tree/main/.github/workflows)
@@ -88,10 +111,10 @@ Here are few cool things in this template:
 - Builds a .dmg on macOS, .msi on Windows, and .deb on Linux
 - Bundles the JavaFX SDK & modules to simplify getting started.
 - Template includes several examples of JavaFX / native desktop integration
-   - Drag & drop with Finder / Explorer
-   - Change the Dock icon dynamically on macOS
-   - Menu on the top for macOS, in the window itself on Windows
-   - Request user attention (bouncing dock icon) on macOS
+    - Drag & drop with Finder / Explorer
+    - Change the Dock icon dynamically on macOS
+    - Menu on the top for macOS, in the window itself on Windows
+    - Request user attention (bouncing dock icon) on macOS
 
 Once you get started, you might find these lists of tutorials, tools, libraries for
 [JavaFX](https://gist.github.com/wiverson/6c7f49819016cece906f0e8cea195ea2)
@@ -113,43 +136,18 @@ To do everything up until the actual installer generation (including generating 
 
 1. Install [OpenJDK Java 16](https://adoptopenjdk.net/) or
    [Oracle Java 16](https://www.oracle.com/java/technologies/javase-downloads.html).
-   - Verify by opening a fresh Terminal/Command Prompt and typing `java --version`.
+    - Verify by opening a fresh Terminal/Command Prompt and typing `java --version`.
 2. Install [Apache Maven 3.6.3](http://maven.apache.org/install.html) or later and make sure it's on your path.
-   - Verify this by opening a fresh Terminal/Command Prompt and typing `mvn --version`.
+    - Verify this by opening a fresh Terminal/Command Prompt and typing `mvn --version`.
 3. macOS: verify XCode is installed and needed agreements accepted.
-   - Launch XCode and accept the license, or verify in Terminal with the command `sudo xcodebuild -license`.
+    - Launch XCode and accept the license, or verify in Terminal with the command `sudo xcodebuild -license`.
 5. Windows: install [Wix 3 binaries](https://github.com/wixtoolset/wix3/releases/).
-   - Installing Wix via the installer should be sufficient for jpackage to find it.
+    - Installing Wix via the installer should be sufficient for jpackage to find it.
 3. Clone/download this project.
 6. Final step: run `mvn clean install` from the root of the project to generate the `target\TestApp.dmg`
    or `target\TestApp.msi` (installer).
-   - Note that the actual generated installer will include a version number in the file name
-   - For reference, here is a complete run log for [a successful run](docs/sample-run.md).
+    - Note that the actual generated installer will include a version number in the file name
+    - For reference, here is a complete run log for [a successful run](docs/sample-run.md).
 
 Because these builds use stripped down JVM images, the
 [generated installers are in the 30-40mb range](https://github.com/wiverson/maven-jpackage-template/releases).
-
-# Sponsor
-
-This project is sponsored by [ChangeNode.com](https://changenode.com/) - if you would like to add easy automatic
-updates, crash reporting, analytics, etc. to your Java/JavaFX desktop application, go check it out... and be sure to
-subscribe for more information about desktop Java development.
-
-# Help
-
-Problems? Make sure everything is installed and working right!
-
-- Compiler not recognizing the --release option? Probably on an old JDK.
-- Can't find jdeps? Probably on an old JDK.
-- Can't find jpackage? Probably haven't set up your system
-  to [allow Java 15 to enable preview packages]((docs/java-15-jpackage.md)).
-- Unrecognized option: --add-modules jdk.incubator.jpackage
-   - Could be a left-over MAVEN_OPTS setting when you switched from Java 15 to Java 16
-   - If you are still on Java 15, you may not have
-     [MAVEN_OPTS set correctly](https://github.com/wiverson/maven-jpackage-template/issues/2).
-
-If you need consulting support, feel free to reach out to [ChangeNode.com](https://changenode.com/).
-
-# Q&A
-
-If you are using the template, browsing the [Q&A](docs/qna.md) is highly recommended.
